--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,26 +7,29 @@
     "parserOptions": {
         "ecmaVersion": 2015
     },
-    "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "off"
-        ],
-        "quotes": [
-            "error",
-            "single",
-            {"allowTemplateLiterals": true}
-        ],
-        "semi": [
-            "error",
-            "always"
-        ],
-        "no-console": [
-            "off"
-        ],
-        "no-prototype-builtins": ["off"]
+  "rules": {
+    "indent": [
+      "error",
+      2
+    ],
+    "linebreak-style": [
+      "off"
+    ],
+    "quotes": [
+      "error",
+      "single",
+      { "allowTemplateLiterals": true }
+    ],
+    "semi": [
+      "error",
+      "always"
+    ],
+    "no-console": [
+      "off"
+    ],
+    "no-prototype-builtins": [ "off" ],
+    "globals": {
+      "Handlebars": false
     }
+  }
 }
